[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d2d-development"
version = "0.0.0"
description = "OpenHEXA DHIS2 to DHIS2 development utility library maintained by Bluesquare Data Services team."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openhexa-toolbox>=2.0.0",
    "openhexa.sdk>=1.0.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
# These we only need to install when running the test, not when installing the package
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

